k8s/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffee-auth-api
  namespace: auth-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coffee-auth-api
  template:
    metadata:
      labels:
        app: coffee-auth-api
    spec:
      containers:
        - name: api
          image: ulyanapitsukha/coffee-auth-service:latest
          ports:
            - containerPort: 8000
