k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coffee-auth-api
  namespace: auth-dev
spec:
  type: LoadBalancer
  selector:
    app: coffee-auth-api
  ports:
    - port: 8000
      targetPort: 8000
