k8s/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coffee-auth-ingress
  namespace: auth-dev
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/auth/
            pathType: Prefix
            backend:
              service:
                name: coffee-auth-api
                port:
                  number: 8000
